--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,8 @@
  *  - https://twitter.com/mmistakes
  *
 */
-
+@import "minimal-mistakes/skins/default";
+@import "minimal-mistakes/skins/neon";
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
